ch32/ingress-for-dashboard/dashboard-ngx-ingress-controller.yaml
# chrono @ 2022-05

# https://docs.nginx.com/nginx-ingress-controller/

# metadata: name
# matchLabels -> app
# - -ingress-class=dash-ink

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-kic-dep
  namespace: nginx-ingress

spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard-kic-dep

  template:
    metadata:
      labels:
        app: dashboard-kic-dep
     #annotations:
       #prometheus.io/scrape: "true"
       #prometheus.io/port: "9113"
       #prometheus.io/scheme: http
    spec:
      serviceAccountName: nginx-ingress
      containers:
      #- image: nginx/nginx-ingress:2.2.0
      - image: nginx/nginx-ingress:2.2-alpine
        imagePullPolicy: IfNotPresent
        name: nginx-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: readiness-port
          containerPort: 8081
        - name: prometheus
          containerPort: 9113
        readinessProbe:
          httpGet:
            path: /nginx-ready
            port: readiness-port
          periodSeconds: 1
        securityContext:
          allowPrivilegeEscalation: true
          runAsUser: 101 #nginx
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
          - -ingress-class=dash-ink
          - -health-status
          - -ready-status
          - -nginx-status

          - -nginx-configmaps=$(POD_NAMESPACE)/nginx-config
          - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
         #- -v=3 # Enables extensive logging. Useful for troubleshooting.
         #- -report-ingress-status
         #- -external-service=nginx-ingress
         #- -enable-prometheus-metrics
         #- -global-configuration=$(POD_NAMESPACE)/nginx-configuration
 
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-kic-svc
  namespace: nginx-ingress
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
    nodePort: 5143
  selector:
    app: dashboard-kic-dep
  type: NodePort
